Fixing little issues with form_field_name

--- a/demo/index.html
+++ b/demo/index.html
@@ -33,8 +33,8 @@
             master-label="Select Value",
             show-remove-icon="false",
             items='[
-            {"description": "States", "url": "./data/get-states-data.txt",  "combo_type": "regular"},
-            {"description": "Stations","url": "./data/get-stations-data.txt",   "combo_type": "multiple"}]'>
+            {"description": "States",  "url": "./data/get-states-data.txt",     "form_field_name": "state_id", "combo_type": "regular"},
+            {"description": "Stations","url": "./data/get-stations-data.txt",   "form_field_name": "station_id", "combo_type": "multiple"}]'>
           </wt-master-slave-combo>
         </template>
       </demo-snippet>
